<resources>
    <string name="app_name">GyumolcsZoldseg</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string-array name="rendezes">
        <item>ABC szerint növekvő</item>
        <item>ABC szerint csökkenő</item>
        <item>Ár szerint növekvő</item>
        <item>Ár szerint csökkenő</item>
    </string-array>
    <string-array name="gyumolcszoldsegnevek">
        <item>banán</item>
        <item>burgonya</item>
        <item>fejeskáposzta</item>
        <item>kapor</item>
        <item>kígyóuborka</item>
        <item>lilahagyma</item>
        <item>narancs</item>
        <item>TV paprika</item>
        <item>paradicsom</item>
        <item>petrezselyem zöld</item>
        <item>vöröshagyma</item>
        <item>kalifornia paprika</item>
        <item>újkrumpli</item>
        <item>petrezselyem gyökér</item>
        <item>fokhagyma</item>
        <item>idared alma</item>
        <item>golden alma</item>
        <item>starking alma</item>
        <item>prince alma</item>
        <item>granny smith alma</item>
        <item>kaiser körte</item>
        <item>vilmos körte</item>
        <item>mazsola szőlő</item>
        <item>citrom</item>
        <item>grapefruit</item>
        <item>mandarin</item>
        <item>földieper</item>
        <item>kelkáposzta</item>
        <item>karfiol</item>
        <item>lilakáposzta</item>
        <item>zeller</item>
        <item>karalábé</item>
        <item>zöldhagyma</item>
        <item>póréhagyma</item>
        <item>gomba</item>
        <item>jégsaláta</item>
        <item>spenót</item>
        <item>rukkola</item>
        <item>spárga</item>
        <item>avokádó</item>
        <item>mangó</item>
        <item>görögdinnye</item>
        <item>sárgadinnye</item>
        <item>brokkoli</item>
        <item>áfonya</item>
        <item>málna</item>
        <item>gyöngybab</item>
        <item>kokóbab</item>
        <item>óriásfehérbab</item>
        <item>pattogatni való kukorica</item>
        <item>lencse</item>
        <item>savanyúkáposzta</item>
        <item>savanyúkáposzta levél</item>
        <item>csalamádé</item>
        <item>csemege uborka</item>
        <item>kovászos uborka</item>
        <item>alma paprika</item>
        <item>koktél paradicsom</item>
        <item>sárgarépa</item>
    </string-array>
    <integer-array name="gyumocszoldsegarak">
        <item>699</item>
        <item>580</item>
        <item>450</item>
        <item>280</item>
        <item>999</item>
        <item>980</item>
        <item>780</item>
        <item>1500</item>
        <item>950</item>
        <item>250</item>
        <item>580</item>
        <item>2599</item>
        <item>980</item>
        <item>2599</item>
        <item>3990</item>
        <item>680</item>
        <item>680</item>
        <item>680</item>
        <item>680</item>
        <item>980</item>
        <item>1599</item>
        <item>1599</item>
        <item>980</item>
        <item>980</item>
        <item>980</item>
        <item>980</item>
        <item>2499</item>
        <item>980</item>
        <item>1280</item>
        <item>780</item>
        <item>390</item>
        <item>390</item>
        <item>399</item>
        <item>639</item>
        <item>2399</item>
        <item>750</item>
        <item>2799</item>
        <item>980</item>
        <item>1799</item>
        <item>980</item>
        <item>1399</item>
        <item>980</item>
        <item>1399</item>
        <item>1799</item>
        <item>2999</item>
        <item>2399</item>
        <item>1290</item>
        <item>1990</item>
        <item>2990</item>
        <item>1280</item>
        <item>1499</item>
        <item>980</item>
        <item>980</item>
        <item>1799</item>
        <item>1799</item>
        <item>1799</item>
        <item>1799</item>
        <item>2999</item>
        <item>699</item>
    </integer-array>
    <string-array name="gyumolcszoldsegmertekegyseg">
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>csomó</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>csomó</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>doboz(0.5 kg)</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>db</item>
        <item>db</item>
        <item>csomó</item>
        <item>db</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>doboz</item>
        <item>csomó(0.5 kg)</item>
        <item>db</item>
        <item>db</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>vödör</item>
        <item>doboz(125g)</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
        <item>kg</item>
    </string-array>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="telefonsz_m">Telefonszám:</string>
    <string name="lakc_m">Lakcím:</string>
    <string name="jelsz">Jelszó:</string>
    <string name="e_mail_c_m">E-mail cím:</string>
    <string name="regisztr_l_s">Regisztrálás</string>
    <string name="bejelentkez_s">Bejelentkezés</string>
    <string name="ha_m_r_van_fi_kod_akkor_jelentkezz_be_itt">Ha már van fiókod akkor jelentkezz be itt!</string>
    <string name="ha_m_g_nincs_fi_kod_akkor_regisztr_lj_itt">Ha még nincs fiókod, akkor regisztrálj itt.</string>
    <string name="sz_ll_t_si_k_lts_g">Szállítási költség:</string>
    <string name="term_kek_ra_k_lts_g">Termékek ára költség:</string>
    <string name="v_g_sszeg">Végösszeg:</string>
    <string name="kos_r_t_rl_se">Kosár törlése</string>
    <string name="megrendel_s">Megrendelés</string>
    <string name="dv_zl_nk_a_z_lds_gesben">Üdvözlünk a zöldségesben!</string>
    <string name="a_r_p_ra_kattintva_tudsz">A répára kattintva tudsz vásárolni.\nA megvásárolt termékeid a kosárba kerülnek.\nRendelés leadásához fiókot kell létrehoznod.</string>
    <string name="minden_10000_ft_feletti_v_s_rl">Minden 10000 Ft feletti vásárlás esetén ingyenes házhozszállítás!</string>
    <string name="j_eg_szs_ges_v_s_rl_st"><![CDATA[Jó, egészséges vásárlást kívánunk! <3]]></string>
    <string name="kijelentkez_s">Kijelentkezés</string>
    <string name="fi_k_t_rl_se">Fiók törlése</string>
    <string name="rendez_si_sorrend">Rendezési sorrend:</string>
</resources>